<resources>

    <string name="app_name">RentMe</string>

    <string name="searchLandlordTenant"> Search for a tenant/landlord by ID </string>
    <string name="searchApartment">Search Apartment</string>
    <string name="callHandling">Call Handling</string>
    <string name="myHistory">My History</string>
    <string name="find_me_a_person">find me a person</string>
    <string name="my_history">my_History</string>
    <string name="find_my_an_apartment">find my an Apartment</string>
    <string name="my_calls">my calls</string>
    <string name="btn_to_find_home">btn to find home</string>
    <string name="search_home_btn">search home btn</string>
    <string name="my_history_btn">my history btn</string>
    <string name="call_handling_btn">call handling btn</string>
    <string name="title_activity_call_handling">CallHandlingActivity</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


    <string name="ongoingCallsTab">Ongoing Calls</string>
    <string name="handlingCallsTab">Handling Calls</string>
    <string name="closedCallsTab">Closed Calls</string>
    <string name="city">City</string>
    <string name="street">Street And House Number</string>
    <string name="mamad">Panic Room</string>
    <string name="furnished">Furnished</string>
    <string name="pets">Pets</string>
    <string name="renovated">Renovated</string>
    <string name="disabledAcess">Disabled Acess</string>
    <string name="elevator">Elevator</string>
    <string name="parking">Parking</string>
    <string name="balcony">Balcony</string>
    <string name="airConditioning">Air Conditioning</string>
    <string name="bars">Bars</string>
    <string name="choose">Choose Advanced Search</string>
    <string name="find">Find</string>
    <string name="server_client_id">WEB CLIENT ID</string>
    <string name="our_logo">Our Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="login_Btn">LoginBtn</string>
    <string name="fb_btn">FB_Btn</string>
    <string name="search_for_a_tenant_landlord_by_id">Search Person</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>